src/report/test/snapshots/hawk_processing__report__test__grouped_damages_multiple_actors_environment.snap
---
source: src/report/test/mod.rs
expression: process_to_string(input)
---
{
  "match_uuid": "9be8ef14-a14e-4f96-b61e-b865c27ada8f",
  "title": "§5KTZ §dVII",
  "date": "2018-12-15T22:15:33+02:00",
  "minecraft": null,
  "settings": {
    "date": true,
    "players_count": true,
    "winners": true,
    "summary": {
      "enabled": true,
      "history": true,
      "players": true,
      "teams": true
    },
    "damages": {
      "enabled": true,
      "damages_per_players": true,
      "damages_per_team": true,
      "damages_from_environment": true,
      "display_killer": true
    },
    "players": {
      "enabled": true,
      "play_time": true,
      "global_statistics": true,
      "statistics_whitelist": [],
      "statistics_highlight": [],
      "used": false,
      "used_whitelist": [],
      "used_highlight": [],
      "mined": true,
      "mined_whitelist": [],
      "mined_highlight": [],
      "picked_up": true,
      "picked_up_whitelist": [],
      "picked_up_highlight": []
    },
    "generator": null
  },
  "players": [
    {
      "uuid": "55b89885-673c-4458-a8bd-33ad9c6190b4",
      "name": "Dada_exe",
      "color": "NONE",
      "team": null,
      "tag_line": "",
      "tag_line_secondary": "",
      "tag_line_details": "",
      "statistics": null,
      "displayed_statistics": null
    },
    {
      "uuid": "e4953e0c-eaff-4aaf-a597-d2a7794b1684",
      "name": "moribus",
      "color": "NONE",
      "team": null,
      "tag_line": "",
      "tag_line_secondary": "",
      "tag_line_details": "",
      "statistics": null,
      "displayed_statistics": null
    }
  ],
  "teams": [],
  "winners": [
    {
      "uuid": "e4953e0c-eaff-4aaf-a597-d2a7794b1684",
      "name": "moribus",
      "color": "NONE",
      "team": null
    }
  ],
  "damages": [
    {
      "date": "2018-12-15T22:59:16+02:00",
      "since_beginning": {
        "secs": 2623,
        "nanos": 0
      },
      "cause": {
        "type": "fly_into_wall"
      },
      "damagee": {
        "uuid": "55b89885-673c-4458-a8bd-33ad9c6190b4",
        "name": "Dada_exe",
        "color": "NONE",
        "team": null
      },
      "damage": 6,
      "lethal": false
    },
    {
      "date": "2018-12-15T22:59:18+02:00",
      "since_beginning": {
        "secs": 2625,
        "nanos": 0
      },
      "cause": {
        "type": "fly_into_wall"
      },
      "damagee": {
        "uuid": "e4953e0c-eaff-4aaf-a597-d2a7794b1684",
        "name": "moribus",
        "color": "NONE",
        "team": null
      },
      "damage": 8,
      "lethal": false
    },
    {
      "date": "2018-12-15T22:59:22+02:00",
      "since_beginning": {
        "secs": 2629,
        "nanos": 0
      },
      "cause": {
        "type": "lightning"
      },
      "damagee": {
        "uuid": "55b89885-673c-4458-a8bd-33ad9c6190b4",
        "name": "Dada_exe",
        "color": "NONE",
        "team": null
      },
      "damage": 8,
      "lethal": true
    },
    {
      "date": "2018-12-15T22:59:24+02:00",
      "since_beginning": {
        "secs": 2631,
        "nanos": 0
      },
      "cause": {
        "type": "lightning"
      },
      "damagee": {
        "uuid": "e4953e0c-eaff-4aaf-a597-d2a7794b1684",
        "name": "moribus",
        "color": "NONE",
        "team": null
      },
      "damage": 12,
      "lethal": false
    }
  ],
  "heals": [],
  "events": [],
  "aggregates": {
    "global_statistics": {
      "generic": {
        "visible": [],
        "hidden": []
      },
      "used": null,
      "mined": {
        "visible": [],
        "hidden": []
      },
      "picked_up": {
        "visible": [],
        "hidden": []
      }
    },
    "players_damages": {
      "55b89885-673c-4458-a8bd-33ad9c6190b4": {
        "damages_taken": [
          {
            "date": "2018-12-15T22:59:16+02:00",
            "since_beginning": {
              "secs": 2623,
              "nanos": 0
            },
            "cause": {
              "type": "fly_into_wall"
            },
            "damagee": {
              "uuid": "55b89885-673c-4458-a8bd-33ad9c6190b4",
              "name": "Dada_exe",
              "color": "NONE",
              "team": null
            },
            "damage": 6,
            "lethal": false
          },
          {
            "date": "2018-12-15T22:59:22+02:00",
            "since_beginning": {
              "secs": 2629,
              "nanos": 0
            },
            "cause": {
              "type": "lightning"
            },
            "damagee": {
              "uuid": "55b89885-673c-4458-a8bd-33ad9c6190b4",
              "name": "Dada_exe",
              "color": "NONE",
              "team": null
            },
            "damage": 8,
            "lethal": true
          }
        ],
        "damages_taken_total": 14,
        "damages_caused": [],
        "damages_caused_total": 0,
        "heals": [],
        "heals_total": 0,
        "kills": [],
        "killed_by": {
          "type": "lightning"
        },
        "game_duration": {
          "secs": 2629,
          "nanos": 0
        },
        "rank": 2
      },
      "e4953e0c-eaff-4aaf-a597-d2a7794b1684": {
        "damages_taken": [
          {
            "date": "2018-12-15T22:59:18+02:00",
            "since_beginning": {
              "secs": 2625,
              "nanos": 0
            },
            "cause": {
              "type": "fly_into_wall"
            },
            "damagee": {
              "uuid": "e4953e0c-eaff-4aaf-a597-d2a7794b1684",
              "name": "moribus",
              "color": "NONE",
              "team": null
            },
            "damage": 8,
            "lethal": false
          },
          {
            "date": "2018-12-15T22:59:24+02:00",
            "since_beginning": {
              "secs": 2631,
              "nanos": 0
            },
            "cause": {
              "type": "lightning"
            },
            "damagee": {
              "uuid": "e4953e0c-eaff-4aaf-a597-d2a7794b1684",
              "name": "moribus",
              "color": "NONE",
              "team": null
            },
            "damage": 12,
            "lethal": false
          }
        ],
        "damages_taken_total": 20,
        "damages_caused": [],
        "damages_caused_total": 0,
        "heals": [],
        "heals_total": 0,
        "kills": [],
        "killed_by": null,
        "game_duration": {
          "secs": 2631,
          "nanos": 0
        },
        "rank": 1
      }
    },
    "environmental_damages": {
      "entities": {},
      "environment": {
        "fly_into_wall": 14,
        "lightning": 20
      }
    }
  },
  "has_players_without_team": true
}
